--- a/인공지능개론/Backpropagation.ipynb
+++ b/인공지능개론/Backpropagation.ipynb
@@ -6,7 +6,8 @@
       "name": "Backpropagation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPUVKjF3GtGUg6dRdvZrDUB",
+      "mount_file_id": "1nOV2nO-r-9VA6K9gaM-RhQCnNt_uMQXb",
+      "authorship_tag": "ABX9TyNEzNCL4Y6YFU6WC4sBb5qY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +63,7 @@
         "\n",
         "print(\"dx:\", dx, \"dy:\", dy, \"dz:\", dz, \"dw:\", dw)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,22 +77,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qcc8VkJjcaaZ"
+        "id": "Uqwecw7fa0JG",
+        "outputId": "a604c159-67fb-40a9-8cad-3339abddc921",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        }
       },
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Uqwecw7fa0JG"
-      },
-      "source": [
-        "'''\n",
         "import math\n",
         "\n",
         "x = 3\n",
@@ -126,11 +119,19 @@
         "dy += dxpy\n",
         "\n",
         "print(\"dx:\", dx)\n",
-        "print(\"dy:\", dy)\n",
-        "'''\n"
+        "print(\"dy:\", dy)\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "dx: 3.642756690117352\n",
+            "dy: 3.1754196460289963\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
